[package]
name = "raytracing-vulkan-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = "1.22"
env_logger = "0.11"
glam = "0.30"
image = "0.25"
log = "0.4"
ordered-float = "5.0.0"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tobj = "4.0"
vulkano = "0.35"
vulkano-shaders = "0.35"
vulkano-util = "0.35"
winit = "0.30"
