[workspace]
members = [
    "bin",
    "tools",
    "random",
    "raytracer", 
    "shaders",
    "scene_file",
    "vulkan",
]
default-members = ["bin"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
ash = "0.38"
ash-window = "0.13"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
glam = "0.30"
image = "0.25"
log = "0.4"
ordered-float = "5.0.0"
rand = "0.9"
rand_chacha = "0.9"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shaderc = "0.9"
tobj = "4.0"
winit = "0.30"
