[package]
name = "raytracer"
version = "0.1.0"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2024"

[dependencies]
anyhow = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
log = { workspace = true }
ordered-float = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tobj = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
