[package]
name = "raytracer"
version = "0.1.0"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2024"

[dependencies]
scene_file = { path = "../scene_file" }
shaders = { path = "../shaders" }

anyhow = { workspace = true }
foldhash = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
log = { workspace = true }
ordered-float = { workspace = true }
tobj = { workspace = true }
vulkano = { workspace = true }
