[package]
name = "shaders"
version = "0.1.0"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2024"

[dependencies]
vulkan = { path = "../vulkan" }

anyhow = { workspace = true }
ash = { workspace = true }
log = { workspace = true }
shaderc = { workspace = true }

[build-dependencies]
shaderc = { workspace = true }
