[package]
name = "vulkan"
version = "0.1.0"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2024"

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
log = { workspace = true }
winit = { workspace = true }
